--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -25,7 +25,7 @@
                         <a class="nav-link tm-nav-link" href="/about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link tm-nav-link" href="/add">Contact</a>
+                        <a class="nav-link tm-nav-link" href="/add">Add Photo</a>
                     </li>
                 </ul>
             </div>
